# sandbox-mcp-tools

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
docs/: implementation-plan.md  mcp-explained.md  platzi-mcp-extension.md
src/: __init__.py
src/sandbox/: __init__.py  container.py  validator.py
src/sandbox_mcp_tools/: __init__.py
src/sandbox_mcp_tools/sandbox/: __init__.py  config.py  container.py  executor.py
src/sandbox_mcp_tools/servers/: __init__.py  python_server.py
src/servers/: __init__.py  bash_server.py  file_server.py  python_server.py  response.py
store-mcp/: PlatziStoreMcp.sln
store-mcp/src/PlatziStore.Application/: PlatziStore.Application.csproj
store-mcp/src/PlatziStore.Host/: PlatziStore.Host.csproj  Program.cs  appsettings.json
store-mcp/src/PlatziStore.Infrastructure/: PlatziStore.Infrastructure.csproj
store-mcp/src/PlatziStore.Shared/: PlatziStore.Shared.csproj
store-mcp/tests/PlatziStore.Application.Tests/: CatalogCommandHandlerTests.cs  CatalogQueryHandlerTests.cs  CategoryCommandHandlerTests.cs  CategoryQueryHandlerTests.cs  CustomerAccountHandlerTests.cs  IdentityAccessHandlerTests.cs  PlatziStore.Application.Tests.csproj  UnitTest1.cs
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bash_server.py  test_container.py  test_container_security.py  test_executor.py  test_file_server.py  test_python_server.py  test_smoke.py
tests/unit/: __init__.py  test_bash_server.py  test_file_server.py  test_python_server.py  test_validator.py
(+89 files in other folders)
